chore: adota google-java-format via Spotless e reformata o projeto
Adiciona o plugin Spotless (spotless-maven-plugin) no pom raiz, configurado
com o formatador google-java-format e amarrado a fase validate, herdado por
todos os modulos. Roda spotless:apply uma vez para deixar o projeto inteiro
already em conformidade — mudanca so de formatacao (indentacao, imports,
javadoc), sem alteracao de comportamento.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>